tests/js/invalid/if/same-types.buri
-- both branches must have the same type
hello = if #true do 1 else "2"